# kedarium

./: CMakeLists.txt  README.md
assets/Shaders/: default.frag  default.vert  gui.frag
docs/: bibliography.bib  documentation.aux  documentation.tex  documentation.toc  main.tex
docs/pages/: annotation.tex  maturita_statement.tex  maturita_title.tex  soc_statement.tex  soc_title.tex  thanks.tex
examples/: CMakeLists.txt  Example.cpp  Sun.cpp
include/Kedarium/: Camera.hpp  Color.hpp  Constants.hpp  Core.hpp  Debug.hpp  File.hpp  GUI.hpp  Graphics.hpp  Image.hpp  Keys.hpp  Lights.hpp  Object.hpp  Solids.hpp  Space.hpp  Window.hpp
lib/: libpng.la
src/: CMakeLists.txt  Camera.cpp  Core.cpp  File.cpp  GUI.cpp  Graphics.cpp  Image.cpp  Object.cpp  Solids.cpp  Space.cpp  Window.cpp
